[project]

name = "nodriver" # Required

version = "0.48.1.post1"  # Required

description = "Asynchronous browser automation and web scraping for Chromium-based browsers."
readme = {file = "README.md", content-type = "text/markdown"} # Optional
requires-python = ">=3.10"
license = "AGPL-3.0-only"
keywords = [
    "webdriver", "browser", "captcha", "scraping",
    "selenium", "navigator", "python3", "cloudflare",
    "chromedriver", "anti-bot", "bot-detection",
    "cloudflare-bypass", "distil", "anti-detection"]
authors = [
  {name = "UltrafunkAmsterdam", email = "doesnotexist@ultrafunk.nl" } # Optional
]

maintainers = [
  {name = "UltrafunkAmsterdam", email = "doesnotexist@ultrafunk.nl" } # Optional
]
classifiers = [  # Optional

    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

]

dependencies = [
      "mss",
      "websockets>=16.0",
      "deprecated",
]

#
[project.urls]
"Homepage" = "https://github.com/UltrafunkAmsterdam/nodriver"
"Bug Reports" = "https://github.com/UltrafunkAmsterdam/nodriver/issues"
"Source" = "https://github.com/UltrafunkAmsterdam/nodriver"


[tool.setuptools]
include-package-data = true
packages = ["nodriver", "nodriver.core", "nodriver.cdp"]
license-files = ["LICENSE.txt"]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "inflection",
    "isort",
    "sphinx",
    "sphinx_markdown_builder",
    "sphinx_autodoc_typehints",
    "furo",
    "pygments",
    "sphinxcontrib-video"
]
